[package]
name = "pw_gix"
version = "0.1.0"
authors = ["Peter Williams <pwil3058@gmail.com>"]

[dependencies]
# TODO: change pw_pathux dependency when it goes public
#pw_pathux = { git = "https://github.com/pwil3058/rs_pw_pathux.git" }
#pw_pathux = { path = "/home/peter/SRC/GITHUB/rs_pw_pathux.git" }
pw_pathux = { path = "../pw_pathux" }

pango = "0.6.0"
cairo-rs = "0.6.0"
pangocairo = "0.7.0"
gdk = "0.10.0"
gdk-pixbuf = "0.6.0"
gio = "0.6.0"
glib = "0.7.0"
gtk = "0.6.0"

crypto-hash = "0.3.3"
fs2 = "0.4.2"
lazy_static = "0.2.8"
num = "0.1.40"
mut_static = "5.0.0"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
which = "1.0.3"

[features]
default = ["gtk/v3_18"]
