[package]
name = "component_test_gui"
version = "0.1.0"
authors = ["Peter Williams <pwil3058@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib = "0.9.0"
gtk = "0.8.0"

pw_gix = { path = "../pw_gix" }
pw_gix_derive = { path = "../pw_gix_derive" }
