[package]
name = "component_test_gui"
version = "0.1.0"
authors = ["Peter Williams <pwil3058@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pw_gix = { path = "../pw_gix" }
pw_gix_derive = { path = "../pw_gix_derive" }
