[package]
name = "derive_tests"
version = "0.1.0"
authors = ["Peter Williams <pwil3058@bigpond.net.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pw_gtk_ext = { path = "../pw_gtk_ext" }
pw_gtk_ext_derive = { path = "../pw_gtk_ext_derive" }
