[package]
name = "pw_gix"
version = "0.1.0"
authors = ["Peter Williams <pwil3058@gmail.com>"]
edition = "2018"

[dependencies]
# TODO: change pw_pathux dependency when it goes public
#pw_pathux = { git = "https://github.com/pwil3058/rs_pw_pathux.git" }
pw_pathux = { path = "../../rs_pw_pathux.git" }
# TODO: change normalised_angles dependency when it goes public
#normalised_angles = { git = "https://github.com/pwil3058/rs_normalised_angles.git" }
normalised_angles = { path = "../../rs_normalised_angles.git" }
# TODO: change colour_math dependency when it goes public
#colour_math = { git = "https://github.com/pwil3058/rs_colour_math.git" }
colour_math = { path = "../../rs_colour_math.git" }

pw_gix_derive = { path = "../pw_gix_derive" }

pango = "0.7.0"
cairo-rs = "0.7.0"
pangocairo = "0.8.0"
gdk = "0.11.0"
gdk-pixbuf = "0.7.0"
gio = "0.7.0"
glib = "0.8.0"
gtk = "0.7.0"

crypto-hash = "0.3.3"
fs2 = "0.4.2"
lazy_static = "1.4.0"
num = "0.1.40"
mut_static = "5.0.0"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
which = "1.0.3"

[features]
default = ["gtk/v3_18"]
