[package]
name = "pw_gix"
version = "0.1.0"
authors = ["Peter Williams <pwil3058@gmail.com>"]
edition = "2018"

[dependencies]
pw_pathux = { git = "https://github.com/pwil3058/rs_pw_pathux.git" }
normalised_angles = { git = "https://github.com/pwil3058/rs_normalised_angles.git" }
num_traits_plus = { git = "https://github.com/pwil3058/rs_num_traits_plus.git" }

pw_gix_derive = { path = "../pw_gix_derive" }

pango = "0.9.0"
cairo-rs = "0.9.0"
pangocairo = "0.10.0"
gdk = "0.13.0"
gdk-pixbuf = "0.9.0"
#gdk-sys = "0.10.0"
gio = "0.9.0"
glib = "0.10.0"
gtk = "0.9.0"

crypto-hash = "0.3.3"
derive_builder = "0.9.0"
fs2 = "0.4.2"
getset = "0.1.0"
lazy_static = "1.4.0"
num = "0.1.40"
mut_static = "5.0.0"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
which = "1.0.3"

[features]
default = ["gtk/v3_18", "gio/v2_44"]
