[package]
name = "pw_gtk_ext"
version = "0.1.0"
authors = ["Peter Williams <pwil3058@bigpond.net.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atk = "0.9.0"
cairo-rs = "0.9.0"
gdk = "0.13.0"
gdk-pixbuf = "0.9.0"
gdkx11 = "0.9.0"
gio = "0.9.0"
glib = "0.10.0"
gtk = "0.9.0"
pango = "0.9.0"
pango-sys = "0.10.0"
pangocairo = "0.10.0"
sourceview = "0.9.0"

log = "0.4.14"

pw_gtk_ext_derive = { path = "../pw_gtk_ext_derive" }
pw_recollect = { path = "../pw_recollect" }

[features]
default = ["gtk/v3_18", "gio/v2_44", "cairo-rs/png"]
